<resources>
    <string name="app_name">Design Support Demo</string>
    <string name="action_settings">Settings</string>

    <string name="btn_snackbar">Show Snackbar</string>
    <string name="btn_text_input_layout">TextInputLayout</string>
    <string name="btn_fab">Show FloatingActionButton</string>
    <string name="btn_hide_toolbar">Hide/Show Toolbar</string>
    <string name="btn_pin_toolbar">Pin Toolbar</string>
    <string name="btn_parallax">Parallax</string>
    <string name="btn_navigationView">NavigationView</string>
    <string name="btn_tabLayout">TabLayout</string>

    <string name="activity_text_input_layout">TextInputLayout</string>
    <string name="activity_toolbar_hide">Toolbar Hides/Unhides</string>
    <string name="activity_toolbar_pin">Toolbar Pin</string>
    <string name="activity_toolbar_parallax">Toolbar Parallax</string>
    <string name="activity_navigation_view">NavigationView</string>
    <string name="activity_tab">TabLayout</string>

    <string name="txt_snackbar">This is a Snackbar</string>
    <string name="btn_show_error">Show Error</string>
    <string name="txt_input_error">You messed up!</string>
    <string name="txt_hint_input_1">Email</string>
    <string name="txt_hint_input_2">Password</string>
    <string name="menu_item_1">Menu Item 1</string>
    <string name="menu_item_2">Menu Item 2</string>
    <string-array name="tab_titles">
        <item>Tab One</item>
        <item>Tab Two</item>
        <item>Tab Three</item>
    </string-array>
</resources>
